--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,17 @@
 :root {
+  /* dark shades of primary color*/
+  --clr-primary-1: hsl(205, 86%, 17%);
+  --clr-primary-2: hsl(205, 77%, 27%);
+  --clr-primary-3: hsl(205, 72%, 37%);
+  --clr-primary-4: hsl(205, 63%, 48%);
   /*primary/main color*/
   --clr-primary-5: hsl(205, 78%, 60%);
+  /*lighter shades of primary color*/
+  --clr-primary-6: hsl(205, 89%, 70%);
+  --clr-primary-7: hsl(205, 90%, 76%);
+  --clr-primary-8: hsl(205, 86%, 81%);
+  --clr-primary-9: hsl(205, 90%, 88%);
+  --clr-primary-10: hsl(205, 100%, 96%);
 }
 .title {
   text-align: center;
@@ -12,4 +23,24 @@
   background: var(--clr-primary-5);
   margin-left: auto;
   margin-right: auto;
+}
+.single-tour {
+  background: var(--clr-white);
+  border-radius: var(--radius);
+  margin: 2rem 0;
+  box-shadow: var(--light-shadow);
+  transition: var(--transition);
+}
+.tour-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1.5rem;
+}
+.tour-info h4 {
+  margin-bottom: 0;
+}
+.tour-price {
+  color: var(--clr-primary-5);
+  background: var(--clr-primary-10);
 }
